[package]
edition = "2021"
name = "auth"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
#local
gears = { path = "../../gears", features = ["cli", "xmods", "governance" ] }

#newtypes
bytes = { workspace = true }
ibc-proto = { workspace = true }

#log
tracing = { workspace = true }

#utils
anyhow = { workspace = true }
clap = { workspace = true }
sha2 = { workspace = true }

#serialization
prost = { workspace = true }
serde = { workspace = true, default-features = false }
serde_json = { workspace = true }
serde-aux = { workspace = true }

#other
# tokio = { workspace = true }
axum = { workspace = true }
tonic = { workspace = true }
# url = { workspace = true }

[dev-dependencies]
data-encoding = { workspace = true }
rand = { workspace = true }
strum = { workspace = true }
gears = { path = "../../gears", features = ["cli", "xmods", "governance", "utils" ] }
