[package]
name = "bank"
version = "0.1.0"
edition = "2021"

[dependencies]
#local
gears = { path = "../../gears" }

#newtypes
bytes = { workspace = true }

#utils
clap = { workspace = true }
anyhow = { workspace = true }
strum = { workspace = true }

#serialization
serde = { workspace = true, default-features = false }
serde_json = { workspace = true }
prost = { workspace = true }

#other
tokio = { workspace = true }
axum = { workspace = true }

[dev-dependencies]
hex = { workspace = true }