[package]
name = "bank"
version = "0.1.0"
edition = "2021"

[dependencies]
#local
gears = { path = "../../gears", features = ["cli", "xmods", "governance" ] }

#newtypes
bytes = { workspace = true }
ibc-proto = { workspace = true }

#utils
clap = { workspace = true }
anyhow = { workspace = true }
strum = { workspace = true }

#serialization
serde = { workspace = true, default-features = false }
serde_json = { workspace = true }
prost = { workspace = true }

#log
tracing = { workspace = true }

#other
tokio = { workspace = true }
axum = { workspace = true }
tonic = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
