[package]
name = "bank"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
#local
gears = { path = "../../gears", features = ["cli", "xmods", "governance"] }

#newtypes
bytes = { workspace = true }
ibc-proto = { workspace = true }
thiserror = { workspace = true }

#utils
clap = { workspace = true }
anyhow = { workspace = true }
nz = { workspace = true }
strum = { workspace = true }

#serialization
serde = { workspace = true, default-features = false }
serde_json = { workspace = true }
prost = { workspace = true }

#log
tracing = { workspace = true }

#other
axum = { workspace = true }
tonic = { workspace = true }

[dev-dependencies]
gears = { path = "../../gears", features = [
    "cli",
    "xmods",
    "governance",
    "utils",
    "mocks",
] }
strum = { workspace = true }
data-encoding = { workspace = true }
vec1 = { workspace = true }
