[package]
edition = "2021"
name = "evidence"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
gears = { path = "../../gears", features = ["cli", "xmods"] }
prost = { workspace = true }
serde = { workspace = true, default-features = false }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ibc-proto = { workspace = true }