[package]
name = "gov"
version = "0.1.0"
edition = "2021"

[dependencies]
gears = { path = "../../gears", features = ["cli", "export", "xmods", "governance" ] }

# unsorted
ibc-proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = [ "serde" ] }
anyhow = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
prost = { workspace = true }
strum = { workspace = true }

[lints]
workspace = true
