[package]
name = "gov"
version = "0.1.0"
edition = "2021"

[dependencies]
gears = { path = "../../gears", features = ["cli", "xmods", "governance" ] }

# unsorted
anyhow = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = [ "serde" ] }
clap = { workspace = true }
ibc-proto = { workspace = true }
nz = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
