[package]
name = "ibc-rs"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
#local
gears = { path = "../../gears" } 

# nutype
bytes = { workspace = true }

#serialization
serde = { workspace = true, default-features = false }
serde-aux = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }        # must match version used in ibc crate
schemars = { workspace = true }

#utils
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
constcat = { workspace = true }
derive_more = "0.99.17"          # TODO: move to workspace
nz = { workspace = true }

#networking
axum = { workspace = true }

#other
ibc = { version = "=0.54.0", features = ["serde"] }
