[package]
name = "ibc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#local
proto-types = { path = "../../proto-types" }
proto-messages = { path = "../../proto-messages" }
store = { path = "../../store" }
gears = { path = "../../gears" }
database = { path = "../../database" }
tendermint = {path = "../../tendermint"}

#serialization
serde = { workspace = true, default-features = false }
serde_json = { workspace = true }
prost = { workspace = true }
schemars = { workspace = true }

#utils
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

#networking
tonic = { workspace = true }
http = { workspace = true }