[package]
name = "ibc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#local
gears = { path = "../../gears" }

# nutype
bytes = { workspace = true }

#serialization
serde = { workspace = true, default-features = false }
serde_json = { workspace = true }
prost = { workspace = true }
schemars = { workspace = true }

#utils
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
constcat = { workspace = true }

#networking
tonic = { workspace = true }
http = { workspace = true }
axum = { workspace = true }