[package]
name = "ibc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#local
gears = { path = "../../gears" }
gears-derive = { path = "../../gears-derive" }

# nutype
bytes = { workspace = true }

#serialization
serde = { workspace = true, default-features = false }
serde-aux = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }
prost_012 = { package = "prost", version = "0.12" }
schemars = { workspace = true }

#utils
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
constcat = { workspace = true }

#networking
tonic = { workspace = true }
http = { workspace = true }
axum = { workspace = true }

#other
ibc = { version = "=0.51.0", features = ["serde"] }
tendermint = { version = "0.34" }                   # TODO: remove this dependency
