[package]
name = "mint"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
#local
gears = { path = "../../gears", features = ["cli", "xmods", "governance" ] }

#serialization
prost = { workspace = true }
serde = { workspace = true, default-features = false }
serde_json = { workspace = true }

# utils
anyhow = { workspace = true }
tracing = { workspace = true }

# nutypes
ibc-proto = { workspace = true }
# nutype = { workspace = true, features = ["serde"]}

#clients
clap = { workspace = true }

[dev-dependencies]
gears = { path = "../../gears", features = ["cli", "xmods", "governance", "utils" ] }
data-encoding = { workspace = true }
strum = { workspace = true }