[package]
edition = "2021"
name = "slashing"
version = "0.1.0"

[dependencies]
bytes = { workspace = true }
gears = { path = "../../gears", features = ["cli", "export", "xmods"] }
prost = { workspace = true }
serde = { workspace = true, default-features = false }
serde_json = { workspace = true }
serde-aux = { workspace = true }
