[package]
edition = "2021"
name = "slashing"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
gears = { path = "../../gears", features = ["cli", "xmods"] }
nz = { workspace = true }
prost = { workspace = true }
serde = { workspace = true, default-features = false }
serde_json = { workspace = true }
serde-aux = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
ibc-proto = { workspace = true }