[package]
name = "staking"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { version = "0.4.38", features = [ "serde" ] }
clap = { workspace = true }
gears = { path = "../../gears", features = [ "cli", "export", "xmods" ] }
prost = { workspace = true }
strum = { workspace = true }
serde = { workspace = true, default-features = false }
serde_json = { workspace = true }
tokio = { workspace = true }
