[package]
name = "staking"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bank = { path = "../bank/" }
#chrono = { version = "0.4.38", features = ["serde"] }
clap = { workspace = true }
gears = { path = "../../gears", features = ["cli", "xmods", "governance"] }
prost = { workspace = true }
serde = { workspace = true, default-features = false }
serde_json = { workspace = true }
thiserror = { workspace = true }
nz = { workspace = true }
ibc-proto = { workspace = true }
tracing = { workspace = true }
tonic = { workspace = true }
tower-layer = { workspace = true }
serde-aux = { workspace = true }
