[package]
name = "staking"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
gears = { path = "../../gears", features = ["cli", "xmods", "governance"] }
ibc-proto = { workspace = true }
prost = { workspace = true }
serde = { workspace = true, default-features = false }
serde-aux = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
nz = { workspace = true }
tracing = { workspace = true }
tonic = { workspace = true }

[dev-dependencies]
bank = { path = "../bank" }
auth ={ path = "../auth" }
data-encoding = { workspace = true }
strum = { workspace = true }
gears = { path = "../../gears", features = ["cli", "xmods", "governance", "utils", "mocks"] }
vec1 = { workspace = true }
pretty_assertions = "1.4.1"